# codeScraper

./: .gitignore  Cargo.toml  GLOBALS.py  build.py  buildLinux.sh  cli.py  codeScraperLinux.spec  codeScraperWin.spec  config.yaml  install.sh  main.py  myvenvmake.sh  requirements.txt
Chrome Extension/: background.js  manifest.json  popup.html  popup.js
ExtensionServer/: config.py  config.yaml  gui.py  main.py  server.py  socio.py  utils.py
scripts/: run_ins.ps1
scripts/VSCode/: tasks.json
src/: cli.rs  cli.yaml  codeforces.rs  config.rs  files.rs  main.rs  scraper.rs
test/: a_going_home.in.0  a_going_home.out.0  b_two_chandeliers.in.0  b_two_chandeliers.in.1  b_two_chandeliers.out.2  c_matrix_sorting.in.0  c_matrix_sorting.in.1  c_matrix_sorting.in.2  c_matrix_sorting.out.3  d_tiles_for_bathroom.in.0  d_tiles_for_bathroom.in.1  e_subset_trick.in.0  f_cupboards_jumps.in.0  f_cupboards_jumps.in.1  f_cupboards_jumps.out.0  f_cupboards_jumps.out.2
