[package]
name = "codeScraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soup = "0.5.1"
reqwest = "0.11.6"
futures = "0.3.18"
error-chain = "0.12.4"
scraper = "0.12.0"
regex = "1.5.4"
tokio = { version = "1.14.0", features = ["full"] }