[package]
name = "codeScraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.34", features = ["yaml"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
futures = "0.3.18"
serde = "1.0"
serde_yaml = "0.8"
glob = "0.3.0"
project-root = "0.2.2"